--- a/llama_neo.ipynb
+++ b/llama_neo.ipynb
@@ -57,8 +57,8 @@
    "outputs": [],
    "source": [
     "username = \"neo4j\"\n",
-    "password = \"pDwtG-NhkE9BO310RUSxw1Hp7deLeF6sZpNTSowT5HM\"\n",
-    "url = \"neo4j+s://89d181cf.databases.neo4j.io\"\n",
+    "password = \"XXXX\"\n",
+    "url = \"XXXX\"\n",
     "database = \"neo4j\""
    ]
   },
@@ -81,6 +81,7 @@
     "index = KnowledgeGraphIndex.from_documents(\n",
     "    documents,\n",
     "    storage_context=storage_context,\n",
+         max_triplets_per_chunk=2,
     "    service_context=service_context,\n",
     ")"
    ]
